# watchml

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  setup.cfg  setup.py
.github/workflows/: python-publish.yml
docs/source/: conf.py  index.rst
notebooks_demo/: 01_File_Handeling.ipynb
src/watchml/: __init__.py
src/watchml/data/: objects.py
src/watchml/file/: file.py  loader.py  manager.py  reader.py  writer.py
src/watchml/ml/: baseline_nns.py  dist.py
src/watchml/utils/: utils.py
tests/file/: test_file.py  test_loader.py  test_manager.py  test_writer.py
watchml/: __init__.py
watchml/file/: file.py
watchml/ml/: __init__.py  baseline_nns.py
watchml/utils/: utils.py
