[metadata]
name = watchml
version = 0.0.1a8
author = Marc Julian Schwarz
author_email = info@marc-julian.de
description = watchml is a Python package providing tools for loading, visualizing and analyzing Apple Watch health data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/marcjulianschwarz/watchml
project_urls =
    Bug Tracker = https://github.com/marcjulianschwarz/watchml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    numpy
    pandas
    annoy
    scikit-learn

[options.packages.find]
where = src
